--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>322 Tagged Open Ruby Bugs as of 2022-02-19 05:37:15 +0900</title>
+<title>327 Tagged Open Ruby Bugs as of 2022-03-05 01:39:34 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -30,9 +30,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">322</span> matched)
+(<span id="matched">327</span> matched)
 <table>
-<caption>322 Tagged Open Ruby Bugs as of 2022-02-19 05:37:15 +0900</caption>
+<caption>327 Tagged Open Ruby Bugs as of 2022-03-05 01:39:34 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -41,6 +41,41 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" build ">
+<td><a href="https://bugs.ruby-lang.org/issues/18608">18608</a>
+</td>
+<td>build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18608">`require&#39;: cannot load such file -- ripper (LoadError) after `make distclean`</a>
+</td>
+</tr>
+<tr class=" os/arch build ">
+<td><a href="https://bugs.ruby-lang.org/issues/18607">18607</a>
+</td>
+<td>os/arch build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18607">Ruby 2.7.5 fails to configure on macOS Monterey on mac with M1 Pro</a>
+</td>
+</tr>
+<tr class=" win core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18605">18605</a>
+</td>
+<td>win core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18605">Fails to run on (newer) 32bit Windows with ucrt</a>
+</td>
+</tr>
+<tr class=" encoding ">
+<td><a href="https://bugs.ruby-lang.org/issues/18601">18601</a>
+</td>
+<td>encoding</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18601">Invalid byte sequences in Big5 encodings</a>
+</td>
+</tr>
+<tr class=" core patch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18600">18600</a>
+</td>
+<td>core patch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18600">Aliased method visibility issue on Ruby 3.1</a>
+</td>
+</tr>
 <tr class=" build os/arch ">
 <td><a href="https://bugs.ruby-lang.org/issues/18592">18592</a>
 </td>
@@ -417,13 +452,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18255">ioctl zeroes the last buffer byte</a>
-</td>
-</tr>
-<tr class=" build maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/18249">18249</a>
-</td>
-<td>build maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18249">The ABI version of dev builds of CRuby does not correspond to the ABI</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -970,6 +998,13 @@
 </td>
 <td>perf</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17383">3.0 recursion memory|speed issues</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17382">17382</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17382">Segfault in String#inspect</a>
 </td>
 </tr>
 <tr class=" perf ">
