--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>327 Tagged Open Ruby Bugs as of 2022-03-05 01:39:34 +0900</title>
+<title>331 Tagged Open Ruby Bugs as of 2022-03-09 10:21:14 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -30,9 +30,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">327</span> matched)
+(<span id="matched">331</span> matched)
 <table>
-<caption>327 Tagged Open Ruby Bugs as of 2022-03-05 01:39:34 +0900</caption>
+<caption>331 Tagged Open Ruby Bugs as of 2022-03-09 10:21:14 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -41,6 +41,34 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" build notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/18616">18616</a>
+</td>
+<td>build notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18616">Warning with clang(1) on MacOS due to __declspec()</a>
+</td>
+</tr>
+<tr class=" lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/18614">18614</a>
+</td>
+<td>lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18614">Error (busy loop) in TestGemCommandsSetupCommand#test_destdir_flag_does_not_try_to_write_to_the_default_gem_home</a>
+</td>
+</tr>
+<tr class=" os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18613">18613</a>
+</td>
+<td>os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18613">Voluntary wanted: Some signal-related tests fail on FreeBSD 13</a>
+</td>
+</tr>
+<tr class=" notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/18612">18612</a>
+</td>
+<td>notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18612">ffi gem installed successfully but while using raises Bus Error.</a>
+</td>
+</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/18608">18608</a>
 </td>
